# cabal-fix

./: .gitattributes  .gitignore  .hlint.yaml  ChangeLog.md  LICENSE  cabal-fix.cabal  cabal-fix.config  cabal-fix.org  cabal.project  my-cabal-fix.config  readme.md  readme.org  stack.yaml  testing.org
app/: cabal-fix.hs  cabal-fixes.hs
other/: init.config  minimal.config  textdeps.dot
src/: CabalFix.hs
src/Cabal/: Fix.hs
src/CabalFix/: Archive.hs  Bespoke.hs  FlatParse.hs  Patch.hs  Version.hs
src/CabalFix/Internal/: Archive.hs
test/: doctests.hs
test/cabals/: anal.cabal  box-socket.cabal  box.cabal  cabal-fix.cabal  chart-svg.cabal  code.cabal  dotparse.cabal  ephemeral.cabal  foo.cabal  iqfeed.cabal  numhask.cabal  perf.cabal  poker-fold.cabal  research-hackage.cabal  tonyday567.cabal  web-rep.cabal
test/rendered/: anal.cabal  box-socket.cabal  cabal-fix.cabal  chart-svg.cabal  code.cabal  dotparse.cabal  ephemeral.cabal  foo.cabal  formatn.cabal  iqfeed.cabal  numhask-space.cabal  poker-fold.cabal  research-hackage.cabal  tonyday567.cabal  web-rep.cabal
