cabal-version: 3.0
name: cabal-fix
version: 0.0.0.1
license: BSD-3-Clause
license-file: LICENSE
category: distribution
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/cabal-fixes#readme
bug-reports: https://github.com/tonyday567/cabal-fixes/issues
synopsis: See readme
description: See readme for description.
build-type: Simple
tested-with: GHC == 9.6.2
extra-doc-files:
    ChangeLog.md
    readme.org

source-repository head
    type: git
    location: https://github.com/tonyday567/cabal-fixes

common ghc-options-exe-stanza
    ghc-options:
        -fforce-recomp
        -funbox-strict-fields
        -rtsopts
        -threaded
        -with-rtsopts=-N

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints

common ghc2021-stanza
    if impl ( ghc >= 9.2 )
        default-language: GHC2021

    if impl ( ghc < 9.2 )
        default-language: Haskell2010
        default-extensions:
            BangPatterns
            BinaryLiterals
            ConstrainedClassMethods
            ConstraintKinds
            DeriveDataTypeable
            DeriveFoldable
            DeriveFunctor
            DeriveGeneric
            DeriveLift
            DeriveTraversable
            DoAndIfThenElse
            EmptyCase
            EmptyDataDecls
            EmptyDataDeriving
            ExistentialQuantification
            ExplicitForAll
            FlexibleContexts
            FlexibleInstances
            ForeignFunctionInterface
            GADTSyntax
            GeneralisedNewtypeDeriving
            HexFloatLiterals
            ImplicitPrelude
            InstanceSigs
            KindSignatures
            MonomorphismRestriction
            MultiParamTypeClasses
            NamedFieldPuns
            NamedWildCards
            NumericUnderscores
            PatternGuards
            PolyKinds
            PostfixOperators
            RankNTypes
            RelaxedPolyRec
            ScopedTypeVariables
            StandaloneDeriving
            StarIsType
            TraditionalRecordSyntax
            TupleSections
            TypeApplications
            TypeOperators
            TypeSynonymInstances

    if impl ( ghc < 9.2 ) && impl ( ghc >= 8.10 )
        default-extensions:
            ImportQualifiedPost
            StandaloneKindSignatures

library
    import: ghc-options-stanza
    import: ghc2021-stanza
    hs-source-dirs: src
    build-depends:
        , Cabal-syntax
        , base               >=4.7 && <5
        , box                >=0.9 && <0.10
        , bytestring         >=0.11.3 && <0.13
        , containers         >=0.6 && <0.7
        , directory
        , flatparse          >=0.3.5 && <0.6
        , pretty             >=1.1.3 && <1.1.4
        , pretty-simple
        , markup-parse
        , string-interpolate >=0.3 && <0.4
        , Diff
        , tree-diff
        , filepath
    exposed-modules: CabalFix

executable cabal-fix
    import: ghc-options-exe-stanza
    import: ghc-options-stanza
    import: ghc2021-stanza
    main-is: cabal-fix.hs
    hs-source-dirs: app
    build-depends:
        , base                 >=4.7 && <5
        , markup-parse
        , cabal-fix
        , optparse-applicative >=0.17 && <0.19
        , filepath
        , directory
        , tree-diff
