cabal-version: 3.0
name:          cabal-fix
version:       0.0.0.1
synopsis: See readme
description: See readme for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
license: BSD-3-Clause
homepage: https://github.com/tonyday567/cabal-fixes#readme
bug-reports: https://github.com/tonyday567/cabal-fixes/issues
build-type: Simple
tested-with: GHC == 9.6.2
extra-doc-files:
  ChangeLog.md
  readme.org
source-repository head
  type: git
  location: https://github.com/tonyday567/cabal-fixes

common ghc2021-stanza
  if impl(ghc >=9.2)
    default-language:
      GHC2021
  if impl(ghc <9.2)
    default-language:
      Haskell2010
    default-extensions:
      BangPatterns
      BinaryLiterals
      ConstrainedClassMethods
      ConstraintKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DoAndIfThenElse
      EmptyCase
      EmptyDataDecls
      EmptyDataDeriving
      ExistentialQuantification
      ExplicitForAll
      FlexibleContexts
      FlexibleInstances
      ForeignFunctionInterface
      GADTSyntax
      GeneralisedNewtypeDeriving
      HexFloatLiterals
      ImplicitPrelude
      InstanceSigs
      KindSignatures
      MonomorphismRestriction
      MultiParamTypeClasses
      NamedFieldPuns
      NamedWildCards
      NumericUnderscores
      PatternGuards
      PolyKinds
      PostfixOperators
      RankNTypes
      RelaxedPolyRec
      ScopedTypeVariables
      StandaloneDeriving
      StarIsType
      TraditionalRecordSyntax
      TupleSections
      TypeApplications
      TypeOperators
      TypeSynonymInstances
  if impl(ghc <9.2) && impl(ghc >=8.10)
    default-extensions:
      ImportQualifiedPost
      StandaloneKindSignatures

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

library
  import: ghc2021-stanza
  import: ghc-options-stanza
  hs-source-dirs:
    src
  default-extensions:
  build-depends:
    base >=4.7 && <5,
    box,
    bytestring,
    containers,
    directory,
    flatparse,
    string-interpolate >=0.3 && <0.4,
    Cabal-syntax,
    pretty-simple,
    pretty >=1.1.3 && <1.1.4,
  exposed-modules:
    Cabal.Fix

common ghc-options-exe-stanza
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N

executable cabal-fixes
  import: ghc2021-stanza
  import: ghc-options-stanza
  import: ghc-options-exe-stanza
  main-is: cabal-fixes.hs
  hs-source-dirs: app
  build-depends:
    , base >=4.7 && <5
    , optparse-applicative >=0.17 && <0.19
    , cabal-fix
