cabal-version: 3.0
-- above name
name:
  -- below name, above field
  foo
version:
  0.1.0.0
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
build-type:
  Simple
extra-doc-files:
  CHANGELOG.md


common lang
  default-language:
    GHC2021

common warnings
  ghc-options:
    -- inside common section above -Wall
    -Wall

library
  -- above import: warning
  import:
    warnings
  import: lang
  exposed-modules:
    MyLib
  build-depends:
    , base ^>=4.18.0.0
    , chart-svg             >= 0.4 && < 0.5
    , containers            ^>= 0.6
    -- squeezed in in dep list
    , deepseq               ^>=1.4
    , flatparse             >=0.3.5  && <0.6
 hs-source-dirs:
    src
executable foo
  import:
    warnings
  main-is:
    Main.hs
  build-depends:
    base ^>=4.18.0.0,
    foo
  hs-source-dirs:
    app
  default-language:
    GHC2021
-- at end
