cabal-version:   3.0
name:            iqfeed
version:         0.2.2
copyright:       Tony Day 2014-2021
maintainer:      tonyday567@gmail.com
author:          Tony Day
homepage:        www.github.com/tonyday567/iqfeed
synopsis:        iqfeed API
description:     iqfeed API
category:        API
build-type:      Simple
extra-doc-files: other/*.svg
tested-with:        GHC == 8.10.7 || ==9.2.8 || ==9.4.5 || ==9.6.2

source-repository head
  type:     git
  location: git://github.com/tonyday567/iqfeed.git

common ghc2021-stanza
  if impl(ghc >=9.2)
    default-language:
      GHC2021
  if impl(ghc <9.2)
    default-language:
      Haskell2010
    default-extensions:
      BangPatterns
      BinaryLiterals
      ConstrainedClassMethods
      ConstraintKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DoAndIfThenElse
      EmptyCase
      EmptyDataDecls
      EmptyDataDeriving
      ExistentialQuantification
      ExplicitForAll
      FlexibleContexts
      FlexibleInstances
      ForeignFunctionInterface
      GADTSyntax
      GeneralisedNewtypeDeriving
      HexFloatLiterals
      ImplicitPrelude
      InstanceSigs
      KindSignatures
      MonomorphismRestriction
      MultiParamTypeClasses
      NamedFieldPuns
      NamedWildCards
      NumericUnderscores
      PatternGuards
      PolyKinds
      PostfixOperators
      RankNTypes
      RelaxedPolyRec
      ScopedTypeVariables
      StandaloneDeriving
      StarIsType
      TraditionalRecordSyntax
      TupleSections
      TypeApplications
      TypeOperators
      TypeSynonymInstances
  if impl(ghc <9.2) && impl(ghc >=8.10)
    default-extensions:
      ImportQualifiedPost
      StandaloneKindSignatures

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Widentities
    -Wpartial-fields

common ghc-options-exe-stanza
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: ghc2021-stanza
  import: ghc-options-stanza
  exposed-modules:
    IqFeed
    IqFeed.Admin
    IqFeed.FlatParse
    IqFeed.History
    IqFeed.Line
    IqFeed.Lookup
    IqFeed.Process
    IqFeed.Quotes
    IqFeed.Socket
    IqFeed.Stream
    IqFeed.Types

  hs-source-dirs:     src
  build-depends:
    , async                 ^>=2.2
    , base                  >=4 && <5
    , bifunctors            >=5.5.11 && <5.7
    , box                   >=0.9 && <0.10
    , bytestring            >=0.11.3 && <0.13
    , chart-svg             >= 0.4 && < 0.5
    , containers            ^>=0.6
    , deepseq               ^>=1.4
    , flatparse             >=0.3.5 && <0.6
    , lucid                 >=2.9 && <2.12
    , mealy                 >=0.4 && <0.5
    , mtl                   >=2.2.2 && <2.4
    , network-simple        ^>=0.4
    , numhask               >=0.11 && <0.12
    , optics-core           ^>=0.4
    , process               ^>=1.6
    , template-haskell      >=2.16 && <2.21
    , text                  >=1.2 && <2.1
    , these                 >=1.1 && <1.3
    , time                  >=1.9 && <1.13
    , unordered-containers  ^>=0.2
    , web-rep               >=0.10.1 && <0.11

executable iqfeed-speed
  import: ghc2021-stanza
  import: ghc-options-stanza
  import: ghc-options-exe-stanza
  main-is:          speed.hs
  hs-source-dirs:   app
  build-depends:
    , base                  >=4.7   && <5
    , box                   ^>=0.9
    , deepseq               ^>=1.4
    , iqfeed
    , optparse-applicative  >=0.17 && <0.19
    , perf                  >=0.10.1 && <0.12

  ghc-options:      -O2

executable iqconnect
  import: ghc2021-stanza
  import: ghc-options-exe-stanza
  import: ghc-options-stanza
  main-is:            iqconnect.hs
  hs-source-dirs:     app
  build-depends:
    , iqfeed
    , numhask  ^>=0.11

executable iqstream
  import: ghc2021-stanza
  import: ghc-options-stanza
  import: ghc-options-exe-stanza
  main-is:            iqstream.hs
  hs-source-dirs:     app
  build-depends:
    , iqfeed
    , numhask  ^>=0.11

executable iqlookup
  import: ghc2021-stanza
  import: ghc-options-stanza
  import: ghc-options-exe-stanza
  main-is:            iqlookup.hs
  hs-source-dirs:     app
  build-depends:
    , iqfeed
    , numhask  ^>=0.11

executable iqmonitor
  import: ghc2021-stanza
  import: ghc-options-stanza
  import: ghc-options-exe-stanza
  main-is:            iqmonitor.hs
  hs-source-dirs:     app
  build-depends:
    , base     >=4    && <5
    , iqfeed
    , optparse-applicative  >=0.17 && <0.19
    , optics-core           ^>=0.4
    , web-rep               >=0.10.1 && <0.11
