cabal-version: 3.0
name:          poker-fold
version:       0.1.1.0
synopsis: A poker (haskell) library
description: An experimental poker library building on poker-base, focused on

    - fast evaluation

    - poker algorithms and intelligence

    - game strategy

    ![odds](other/odds2.svg)

category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) 2020-2023
license: BSD-3-Clause
homepage: https://github.com/tonyday567/poker-fold#readme
tested-with:     GHC == 8.10.7 || ==9.2.8 || ==9.4.5 || ==9.6.2
bug-reports: https://github.com/tonyday567/poker-fold/issues
build-type: Simple
extra-doc-files:
  other/*.svg
  ChangeLog.md
  readme.org
source-repository head
  type: git
  location: https://github.com/tonyday567/poker-fold

common ghc2021-stanza
  if impl(ghc >=9.2)
    default-language:
      GHC2021
  if impl(ghc <9.2)
    default-language:
      Haskell2010
    default-extensions:
      BangPatterns
      BinaryLiterals
      ConstrainedClassMethods
      ConstraintKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DoAndIfThenElse
      EmptyCase
      EmptyDataDecls
      EmptyDataDeriving
      ExistentialQuantification
      ExplicitForAll
      FlexibleContexts
      FlexibleInstances
      ForeignFunctionInterface
      GADTSyntax
      GeneralisedNewtypeDeriving
      HexFloatLiterals
      ImplicitPrelude
      InstanceSigs
      KindSignatures
      MonomorphismRestriction
      MultiParamTypeClasses
      NamedFieldPuns
      NamedWildCards
      NumericUnderscores
      PatternGuards
      PolyKinds
      PostfixOperators
      RankNTypes
      RelaxedPolyRec
      ScopedTypeVariables
      StandaloneDeriving
      StarIsType
      TraditionalRecordSyntax
      TupleSections
      TypeApplications
      TypeOperators
      TypeSynonymInstances
  if impl(ghc <9.2) && impl(ghc >=8.10)
    default-extensions:
      ImportQualifiedPost
      StandaloneKindSignatures

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Widentities
    -Wpartial-fields

common ghc-options-exe-stanza
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: ghc2021-stanza
  import: ghc-options-stanza
  hs-source-dirs:
    src
  build-depends:
    adjunctions >= 4.4 && < 4.5,
    base >=4.7 && <5,
    chart-svg >= 0.4 && < 0.5,
    containers >= 0.6 && < 0.7,
    distributive >= 0.6 && < 0.7,
    deepseq >= 1.4.8 && < 1.5,
    formatn >= 0.3 && <0.4,
    mtl >= 2.2.2 && < 2.4,
    numhask-array >= 0.10 && <0.12,
    optics-core ^>= 0.4,
    random ^>=1.2,
    text >=1.2 && <2.1,
    vector >= 0.12.3 && <0.14,
    vector-algorithms >= 0.9.0 && < 0.10,
    prettyprinter >= 1.7.1 && < 1.8,
    -- generic-lens >= 2.2.2 && < 2.3,
    vector-mmap >= 0.0.3 && < 0.1,
  exposed-modules:
    Poker.Card
    Poker.Range
    Poker.Charts
    Poker.HandRank
    Poker.Lexico
    Poker.Random
    Poker.Table
    Poker.Card.Storable

executable poker-fold-speed
  import: ghc2021-stanza
  import: ghc-options-stanza
  import: ghc-options-exe-stanza
  main-is: speed.hs
  hs-source-dirs:
    app
  build-depends:
    base >=4.7 && <5,
    poker-fold,
    perf >= 0.10 && <0.12,
    containers >= 0.6 && < 0.7,
    mtl >= 2.2.2 && <2.4,
    random ^>= 1.2,
    vector >= 0.12.3 && <0.14,
    deepseq >= 1.4.8 && < 1.5,
    optparse-applicative >= 0.17 && < 0.19,
  ghc-options:
    -O2

executable poker-fold-writes
  import: ghc2021-stanza
  import: ghc-options-stanza
  import: ghc-options-exe-stanza
  main-is: writes.hs
  hs-source-dirs:
    app
  build-depends:
    base >=4.7 && <5,
    poker-fold,
    optparse-applicative >= 0.17 && < 0.19,
  ghc-options:
    -O2
