cabal-version: 3.0
name:          research-hackage
version:       0.0.1
synopsis: See readme.org
description: See readme.org for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) 2022
license: BSD-3-Clause
homepage: https://github.com/tonyday567/research-hackage#readme
bug-reports: https://github.com/tonyday567/research-hackage/issues
build-type: Simple
tested-with: GHC == 8.10.7
source-repository head
  type: git
  location: https://github.com/tonyday567/research-hackage

common ghc2021-stanza
  if impl(ghc >=9.2)
    default-language:
      GHC2021
  if impl(ghc <9.2)
    default-language:
      Haskell2010
    default-extensions:
      BangPatterns
      BinaryLiterals
      ConstrainedClassMethods
      ConstraintKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DoAndIfThenElse
      EmptyCase
      EmptyDataDecls
      EmptyDataDeriving
      ExistentialQuantification
      ExplicitForAll
      FlexibleContexts
      FlexibleInstances
      ForeignFunctionInterface
      GADTSyntax
      GeneralisedNewtypeDeriving
      HexFloatLiterals
      ImplicitPrelude
      InstanceSigs
      KindSignatures
      MonomorphismRestriction
      MultiParamTypeClasses
      NamedFieldPuns
      NamedWildCards
      NumericUnderscores
      PatternGuards
      PolyKinds
      PostfixOperators
      RankNTypes
      RelaxedPolyRec
      ScopedTypeVariables
      StandaloneDeriving
      StarIsType
      TraditionalRecordSyntax
      TupleSections
      TypeApplications
      TypeOperators
      TypeSynonymInstances
  if impl(ghc <9.2) && impl(ghc >=8.10)
    default-extensions:
      ImportQualifiedPost
      StandaloneKindSignatures

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Widentities
    -Wpartial-fields

library
  import: ghc2021-stanza
  import: ghc-options-stanza
  hs-source-dirs:
    src
  default-extensions:
  build-depends:
    base >=4.7 && <5,
    chart-svg >= 0.4 && < 0.5,
    streamly >= 0.8 && <0.10,
    streamly-core >=0.1 && <0.2,
    streamly-archive >= 0.1 && <0.3,
    bytestring >= 0.11.3 && <0.13,
    directory,
    bifunctors,
    cryptonite,
    containers,
    flatparse,
    Cabal,
    fgl,
    dotparse,
    algebraic-graphs,
    string-interpolate ^>=0.3,
    optics-core,
  exposed-modules:
    Research.Hackage
