cabal-version: 3.0
name: anal
version: 0.0.2
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2023
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/anal#readme
bug-reports: https://github.com/tonyday567/anal/issues
synopsis: See readme.md
description: See readme.md for description.
build-type: Simple
tested-with: GHC == 9.6.2

source-repository head
    type: git
    location: https://github.com/tonyday567/anal

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

common ghc2021-stanza
    if impl ( ghc >= 9.2 )
        default-language: GHC2021

    if impl ( ghc < 9.2 )
        default-language: Haskell2010
        default-extensions:
            BangPatterns
            BinaryLiterals
            ConstrainedClassMethods
            ConstraintKinds
            DeriveDataTypeable
            DeriveFoldable
            DeriveFunctor
            DeriveGeneric
            DeriveLift
            DeriveTraversable
            DoAndIfThenElse
            EmptyCase
            EmptyDataDecls
            EmptyDataDeriving
            ExistentialQuantification
            ExplicitForAll
            FlexibleContexts
            FlexibleInstances
            ForeignFunctionInterface
            GADTSyntax
            GeneralisedNewtypeDeriving
            HexFloatLiterals
            ImplicitPrelude
            InstanceSigs
            KindSignatures
            MonomorphismRestriction
            MultiParamTypeClasses
            NamedFieldPuns
            NamedWildCards
            NumericUnderscores
            PatternGuards
            PolyKinds
            PostfixOperators
            RankNTypes
            RelaxedPolyRec
            ScopedTypeVariables
            StandaloneDeriving
            StarIsType
            TraditionalRecordSyntax
            TupleSections
            TypeApplications
            TypeOperators
            TypeSynonymInstances

    if impl ( ghc < 9.2 ) && impl ( ghc >= 8.10 )
        default-extensions:
            ImportQualifiedPost
            StandaloneKindSignatures

library
    import: ghc-options-stanza
    import: ghc2021-stanza
    hs-source-dirs: src
    build-depends:
        , base        >=4.7 && <5
        , bytestring  >=0.11.3 && <0.13
        , chart-svg   >=0.4 && <0.5
        , containers  >=0.6 && <0.7
        , flatparse   >=0.3.5 && <0.6
        , formatn     >=0.2.1 && <0.4
        , lucid       >=2.9 && <2.12
        , mealy       >=0.4 && <0.5
        , mtl         >=2.2.2 && <2.4
        , numhask     >=0.10 && <0.12
        , optics-core >=0.4 && <0.5
        , prettychart
        , profunctors >=5.6.2 && <5.7
        , text        >=1.2 && <2.1
        , time        >=1.9 && <1.13
        , web-rep     >=0.10.1 && <0.11
    exposed-modules: Anal
