cabal-version: 3.0
-- above name
name:
    -- below name, above field
    foo
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2023
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
build-type: Simple
extra-doc-files: CHANGELOG.md

common lang
    default-language: GHC2021

common warnings
    ghc-options:
        -- inside common section above -Wall
        -Wall

library
    import: lang
    -- above import: warning
    import: warnings
    hs-source-dirs: src
    build-depends:
        , base       >=4.7 && <5
        , chart-svg  >=0.4 && <0.5
        , containers >=0.6 && <0.7
        -- squeezed in in dep list
        , deepseq    >=1.4.4 && <1.5
        , flatparse  >=0.3.5 && <0.6
    exposed-modules: MyLib

executable foo
    import: warnings
    main-is: Main.hs
    default-language: GHC2021
    hs-source-dirs: app
    build-depends:
        , base >=4.7 && <5
        , foo
-- at end
