cabal-version: 2.4
name: formatn
version: 0.3.0
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2016
category: text
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/formatn#readme
bug-reports: https://github.com/tonyday567/formatn/issues
synopsis: Formatting of doubles.
description:
    This package provides support for number formatting styles, especially styles involving significant figure calculations.
    .
    == Usage
    .
    >>> import Data.FormatN
    >>> comma (Just 3) 1234
    1,230

build-type: Simple
tested-with: GHC ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.2.5 || ==9.4.4

source-repository head
    type: git
    location: https://github.com/tonyday567/formatn

library
    default-language: Haskell2010
    hs-source-dirs: src
    build-depends:
        -- just for cabal-docspec --check-properties
        , QuickCheck >=2.14.2 && <2.15
        , base       >=4.7 && <5
        , containers >=0.6 && <0.7
        , text       >=1.2 && <2.1
    exposed-modules: Data.FormatN
    other-modules:
    default-extensions:
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints
