cabal-version: 3.0
name: iqfeed
version: 0.2.2
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2014
category: API
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: www.github.com/tonyday567/iqfeed
synopsis: iqfeed API
description: iqfeed API
build-type: Simple
tested-with: GHC == 8.10.7 || ==9.2.8 || ==9.4.5 || ==9.6.2
extra-doc-files: other/*.svg

source-repository head
    type: git
    location: git://github.com/tonyday567/iqfeed.git

common ghc-options-exe-stanza
    ghc-options:
        -fforce-recomp
        -funbox-strict-fields
        -rtsopts
        -threaded
        -with-rtsopts=-N

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

common ghc2021-stanza
    if impl ( ghc >= 9.2 )
        default-language: GHC2021

    if impl ( ghc < 9.2 )
        default-language: Haskell2010
        default-extensions:
            BangPatterns
            BinaryLiterals
            ConstrainedClassMethods
            ConstraintKinds
            DeriveDataTypeable
            DeriveFoldable
            DeriveFunctor
            DeriveGeneric
            DeriveLift
            DeriveTraversable
            DoAndIfThenElse
            EmptyCase
            EmptyDataDecls
            EmptyDataDeriving
            ExistentialQuantification
            ExplicitForAll
            FlexibleContexts
            FlexibleInstances
            ForeignFunctionInterface
            GADTSyntax
            GeneralisedNewtypeDeriving
            HexFloatLiterals
            ImplicitPrelude
            InstanceSigs
            KindSignatures
            MonomorphismRestriction
            MultiParamTypeClasses
            NamedFieldPuns
            NamedWildCards
            NumericUnderscores
            PatternGuards
            PolyKinds
            PostfixOperators
            RankNTypes
            RelaxedPolyRec
            ScopedTypeVariables
            StandaloneDeriving
            StarIsType
            TraditionalRecordSyntax
            TupleSections
            TypeApplications
            TypeOperators
            TypeSynonymInstances

    if impl ( ghc < 9.2 ) && impl ( ghc >= 8.10 )
        default-extensions:
            ImportQualifiedPost
            StandaloneKindSignatures

library
    import: ghc-options-stanza
    import: ghc2021-stanza
    hs-source-dirs: src
    build-depends:
        , async                ^>=2.2
        , base                 >=4.7 && <5
        , bifunctors           >=5.5.11 && <5.7
        , box                  >=0.9 && <0.10
        , bytestring           >=0.11.3 && <0.13
        , chart-svg            >=0.4 && <0.5
        , containers           >=0.6 && <0.7
        , deepseq              >=1.4.4 && <1.5
        , flatparse            >=0.3.5 && <0.6
        , lucid                >=2.9 && <2.12
        , mealy                >=0.4 && <0.5
        , mtl                  >=2.2.2 && <2.4
        , network-simple       ^>=0.4
        , numhask              >=0.10 && <0.12
        , optics-core          >=0.4 && <0.5
        , process              ^>=1.6
        , template-haskell     >=2.16 && <2.21
        , text                 >=1.2 && <2.1
        , these                >=1.1 && <1.3
        , time                 >=1.9 && <1.13
        , unordered-containers >=0.2 && <0.3
        , web-rep              >=0.10.1 && <0.11
    exposed-modules:
        IqFeed
        IqFeed.Admin
        IqFeed.FlatParse
        IqFeed.History
        IqFeed.Line
        IqFeed.Lookup
        IqFeed.Process
        IqFeed.Quotes
        IqFeed.Socket
        IqFeed.Stream
        IqFeed.Types

executable iqconnect
    import: ghc-options-exe-stanza
    import: ghc-options-stanza
    import: ghc2021-stanza
    main-is: iqconnect.hs
    hs-source-dirs: app
    build-depends:
        , iqfeed
        , numhask >=0.10 && <0.12

executable iqfeed-speed
    import: ghc-options-exe-stanza
    import: ghc-options-stanza
    import: ghc2021-stanza
    main-is: speed.hs
    hs-source-dirs: app
    build-depends:
        , base                 >=4.7 && <5
        , box                  >=0.9 && <0.10
        , deepseq              >=1.4.4 && <1.5
        , iqfeed
        , optparse-applicative >=0.17 && <0.19
        , perf                 >=0.10 && <0.12
    ghc-options: -O2

executable iqlookup
    import: ghc-options-exe-stanza
    import: ghc-options-stanza
    import: ghc2021-stanza
    main-is: iqlookup.hs
    hs-source-dirs: app
    build-depends:
        , iqfeed
        , numhask >=0.10 && <0.12

executable iqmonitor
    import: ghc-options-exe-stanza
    import: ghc-options-stanza
    import: ghc2021-stanza
    main-is: iqmonitor.hs
    hs-source-dirs: app
    build-depends:
        , base                 >=4.7 && <5
        , iqfeed
        , optics-core          >=0.4 && <0.5
        , optparse-applicative >=0.17 && <0.19
        , web-rep              >=0.10.1 && <0.11

executable iqstream
    import: ghc-options-exe-stanza
    import: ghc-options-stanza
    import: ghc2021-stanza
    main-is: iqstream.hs
    hs-source-dirs: app
    build-depends:
        , iqfeed
        , numhask >=0.10 && <0.12
